welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:3: error: '<-' expected but ')' found.
	for (i<1 to 4)
                     ^Runner:18: error: illegal start of simple expression
}
^